# MLlab

./: .gitignore  pyproject.toml
EA1/: 2201074_EA1.ipynb  data.csv  gen.py  predictHousePrices.py  test_data.csv
EA2/: 2201074_EA2.py  Kmedoids.py  clustering.py  data.csv  k_medoids.py  test.py
EA3/: data.csv  decision_tree.py  predict_illness.py
EA4/: data.csv  knn.py
MISC/: LinearRegression.py  backtracking.py  fuzzy_k_means.py  knn.py  knn_classification.py
Midsem/: 2201074_MIDSEM.py  2201074_q1.ipynb  iris_data_analysis.ipynb  test.py
PA1/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  3.py  4.py  5.py  6.py  7.py  9.py  filename.txt  output_matrix.csv
PA10/: data.csv  predict_churn.py
PA2/: Simple_Linear_Regression.py  i.py
PA3/: Compare.py  GD.py  SGD.py  data.csv
PA4/: GDwValidation.py  data.csv  simpleLinearRegression.py
PA5/: predictChurn.py
PA7/: knn.py
